--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 		<div class="content-wrap">
 			<header class="header">
 				<div class="logo">
-					<img src="/images/logo.png" alt="Paradigm Pet Professionals Logo" />
+					<a href="index.html">
+						<img src="/images/logo.png" alt="Paradigm Pet Professionals Logo" />
+					</a>
 				</div>
 				<div class="nav-links">
 					<a href="index.html">Home</a>
@@ -47,12 +49,15 @@
 					</div>
 				</div>
 			</header>
+
+			<!-- Hero -->
 			<section class="card hero-section">
 				<h1>Welcome to Paradigm Pet Professionals</h1>
 				<p>Evidence-based pet care advice for every pet lover.</p>
 				<img src="/images/catanddog.jpg" alt="Paradigm Pet Professionals Logo" />
 			</section>
 
+			<!-- About Us -->
 			<section class="card about-us">
 				<h2>About Us</h2>
 				<p>
@@ -134,10 +139,24 @@
 						>
 					</li>
 				</ul>
+
+				<!-- Services -->
+				<h2>Services</h2>
+				<div class="squircles-container">
+					<p class="squircle">
+						Virtual consultations <br />&<br />
+						Presentations
+					</p>
+					<p class="squircle">One-on-One consultations concerning individual pets</p>
+					<p class="squircle">
+						Group presentations regarding general pet care <br />(can be tailored to
+						<br />the needs of the group)
+					</p>
+				</div>
 			</section>
 			<section class="card consultation-form shadow">
 				<h2>Consultation Form</h2>
-				<form>
+				<form id="consultation-form">
 					<input
 						type="text"
 						id="client-name"
@@ -199,6 +218,14 @@
 				var modal = document.getElementById('myModal');
 				modal.style.display = show ? 'block' : 'none';
 			}
+
+			document
+				.getElementById('consultation-form')
+				.addEventListener('submit', function (event) {
+					event.preventDefault();
+					alert('Form submitted successfully!');
+					this.reset();
+				});
 		</script>
 	</body>
 </html>
