add services styles

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 				</div>
 				<div id="myModal" class="modal">
 					<div class="modal-content">
-						<span class="close" onclick="toggleModal(false)">&times;</span>
 						<a href="index.html" onclick="toggleModal(false)">Home</a>
 						<a href="cats.html" onclick="toggleModal(false)">Cats</a>
 						<a href="dogs.html" onclick="toggleModal(false)">Dogs</a>
 						<a href="fish.html" onclick="toggleModal(false)">Fish</a>
 						<a href="faqs.html" onclick="toggleModal(false)">FAQs</a>
+						<a class="close" onclick="toggleModal(false)">&#10539;</a>
 					</div>
 				</div>
 			</header>
