--- a/cats.html
+++ b/cats.html
@@ -150,7 +150,8 @@
 			</section>
 		</div>
 		<footer class="footer">
-			<p>Paradigm Pet Professionals&copy;</p>
+			<!-- <p>Paradigm Pet Professionals&copy;</p> -->
+			<img class="footerLogo" src="images/footerLogo.png" alt="Company Logo" />
 			<div class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">
 				Back to Top&#x21E7;
 			</div>
