--- a/cats.html
+++ b/cats.html
@@ -22,7 +22,7 @@
 				</div>
 				<div class="nav-links">
 					<a href="index.html">Home</a>
-					<a class="cats-index" href="cats.html">Cats</a>
+					<a class="active" href="cats.html">Cats</a>
 					<a href="dogs.html">Dogs</a>
 					<a href="fish.html">Fish</a>
 				</div>
