--- a/faqs.html
+++ b/faqs.html
@@ -29,7 +29,7 @@
 
 				<div class="search-bar">
 					<div class="nav-links">
-						<a href="faqs.html">FAQs</a>
+						<a class="active" href="faqs.html">FAQs</a>
 					</div>
 					<input type="search" placeholder="Search..." />
 				</div>
