--- a/fish.html
+++ b/fish.html
@@ -24,7 +24,7 @@
 					<a href="index.html">Home</a>
 					<a class="cats-index" href="cats.html">Cats</a>
 					<a href="dogs.html">Dogs</a>
-					<a href="fish.html">Fish</a>
+					<a class="active" href="fish.html">Fish</a>
 				</div>
 
 				<div class="search-bar">
