--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					</a>
 				</div>
 				<div class="nav-links">
-					<a href="index.html">Home</a>
+					<a class="active" href="index.html">Home</a>
 					<a href="cats.html">Cats</a>
 					<a href="dogs.html">Dogs</a>
 					<a href="fish.html">Fish</a>
