--- a/dogs.html
+++ b/dogs.html
@@ -22,8 +22,8 @@
 				</div>
 				<div class="nav-links">
 					<a href="index.html">Home</a>
-					<a class="cats-index" href="cats.html">Cats</a>
-					<a href="dogs.html">Dogs</a>
+					<a href="cats.html">Cats</a>
+					<a class="active" href="dogs.html">Dogs</a>
 					<a href="fish.html">Fish</a>
 				</div>
 
