--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
 			</section>
 			<section class="card consultation-form shadow">
 				<h2>Consultation Form</h2>
+				<p>
+					Fill out this form to request a consultation
+					<br />
+					and will contact you within 48 hours.
+					<br />
+					All fields are required.
+				</p>
 				<form id="consultation-form">
 					<input
 						type="text"
