--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 						<br />the needs of the group)
 					</p>
 				</div>
+				<p style="text-align: center; text-indent: 0">
+					Paradigm Pet Professionals has 12 years’ experience working with pet owners,
+					certifications in pet health and nutrition, and customer recognition for
+					outstanding support.
+				</p>
 			</section>
 			<section class="card consultation-form shadow">
 				<h2>Consultation Form</h2>
